# apuestas_game

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/apuestas/: app.py
src/apuestas/models/: card.py  game.py  player.py
tests/models/: test_cards.py  test_game.py  test_player.py
